# ChangeLog for sci-mathematics/Macaulay2
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/Macaulay2/ChangeLog,v 1.34 2015/03/26 10:17:49 tomka Exp $

  26 Mar 2015; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.4-r1.ebuild,
  Macaulay2-1.4.ebuild, Macaulay2-1.6.ebuild, Macaulay2-1.7_pre.ebuild:
  restrict ntl dep

  24 Mar 2015; Agostino Sarubbo <ago@gentoo.org> Macaulay2-1.7_pre.ebuild:
  Stable for amd64, wrt bug #542572

*Macaulay2-1.7_pre (04 Jul 2014)

  04 Jul 2014; Thomas Kahle <tomka@gentoo.org> +Macaulay2-1.7_pre.ebuild:
  bump to prerelease version as latest release fails

  03 May 2014; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.6.ebuild:
  Use python-2 for gtest (bug 509462)

  27 Jul 2013; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.6.ebuild:
  relax Normaliz dep

  28 Jun 2013; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.6.ebuild:
  Add correct python:2.7 dep

*Macaulay2-1.6 (15 May 2013)

  15 May 2013; Thomas Kahle <tomka@gentoo.org> +Macaulay2-1.6.ebuild,
  +files/1.6-lapack.patch, +files/1.6-paths-of-external-programs.patch,
  +files/1.6-prune-NumAlgGeo-examples.patch:
  bump to 1.6

  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> Macaulay2-1.4-r1.ebuild:
  x86 stable wrt bug #394157

  13 Dec 2011; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.4-r1.ebuild:
  Restrict tests as per bug 366711

  09 Dec 2011; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.4-r1.ebuild:
  correct dep on normaliz, amd64 stable per bug 394157

*Macaulay2-1.4-r1 (25 Sep 2011)

  25 Sep 2011; Thomas Kahle <tomka@gentoo.org>
  +files/1.4-comint-use-fields.patch, +files/1.4-fix-emacs-syntax-table.patch,
  +Macaulay2-1.4-r1.ebuild, +files/1.4-pari-2.5-compat.patch:
  Fix pari-2.5 compatibility (Bug 381347) and two emacs-improvements

  14 May 2011; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.4.ebuild:
  x86 stable per bug 366379
