@@ -26,13 +26,25 @@ DIST libfac-3-1-6.tar.gz 83557 SHA256 b511559d1c49ca799d46dad6b8e89b9f0183f1c2f5
 EBUILD Macaulay2-1.4-r1.ebuild 4332 SHA256 ee166f0023d2a41f68d01103c32b57adb13a99df6d8fd2ec0eb470ce0082a04f SHA512 4e73586bda7d56a38206cb960e84f7697717155539dfdb150a16ded5cc3925ad8f48763d68c4e85927a20674faf7ef4dc62045b4b04d952f0d4602b13ceb1cf4 WHIRLPOOL c0a377bffc089b3a6176f6cdc323cf692721387e3e883fc224b3ec279482b919ac794c1ef81be516dbf0feb0e1261573b93c3e544a2b9dca1cd4fffaeb1265d4
 EBUILD Macaulay2-1.4.ebuild 3909 SHA256 4f4e171e14eef6895a5f33d9586d07994ed4eb8812b6bf3d6b9729f9c8a77467 SHA512 76f34282eb73aaea3a81baed5ce6a410579b665c4fe26cb8037b60778f3adc1024bb3e85523e5af2bc94c6c44559f03793fb9c63a2f70135db771d5a6a17056c WHIRLPOOL 4ef152c4342a67fdf3aa27a42f1f513213042aa0f2b6e555955af8289a19efb73fd042b39e1bf66c2137563da1ef78379a53512970c5b52edb250acd44ef6f95
 EBUILD Macaulay2-1.6.ebuild 5086 SHA256 33abba1628ae0280da2ebd09a10e6503ec538ec19cd5b77308a24e97e9692b69 SHA512 a0efd0301a46fc953f704f9c108b409ca8a0ead956e6f9216ca6f6ed89f508dd02fcda7a6fba3a807d249fe9ea190f2f2671a615936672da5725b4b4bbb66682 WHIRLPOOL 4ed06acc7ed8e8d798a237fcc6c90c4773b382063ef96c3e749d3869e0b8f3821d390065663fabb0f725afdd8f79ba98addebf17ae84c980f4b5cdcb048edc32
-EBUILD Macaulay2-1.7_pre.ebuild 4049 SHA256 66393363c6e1d52763e0c78a0a694867a59d275c71f69aaa6e46f6a0ce322d6e SHA512 de0b211499a5b634f9c518204efccc0d2836913e173e8b4c6602e948b43ff1f6f6a0dd383486849e0f6068f74fa6507dde08e43a5ef474c0d91559de73d16b10 WHIRLPOOL 58cccd5e07bb444bfc26098d3d1982a76329a9b432369a3db6feb301351eade9845106d849ae1bec1bb54c87435e7f4820cb07d3e8be1bb2b9c5c4c133d05e6e
-MISC ChangeLog 2561 SHA256 38a38b7ca1701ce513d400eb71b608842ca0c2cd003ded5dbc2f49ad4919a08e SHA512 b161e03b711fef66923cd63ac49a5037d33863168f44ba0aa0dd69765a6df5155e10782dc4e93176d9cb8b07c780bb09d17f68d833b42d41531eda8c456088d9 WHIRLPOOL 74e9d5092bb593c82843be3390ce83f65fe16db44b56be7902649a16b2d897e62a1456a40879b8dab98e1fec42539c58959e79f2d39291bc94a4c662d698f26d
+EBUILD Macaulay2-1.7_pre.ebuild 4044 SHA256 468ae5964d38117e8960ef2c2a8d7f859a40a4dc8069d6b7a2c7060d2c059de4 SHA512 ee90c3462996ddc6f2af7abc038fa72746d2013d04bca79c202d13d0d5dd6c21a04f8fbe3aa4d912166d897ca9eaac3ec91536ce7cb7b778a600d86d8ccac4d0 WHIRLPOOL 04590ef7846cd1ad0d12f6fa5900c3e4cf545e637ee876ace229cb32241c9aa968e5635e6128c5142abd686b6dd4dbcbebf03c138df7a506dbbe30cd27d30889
+MISC ChangeLog 2673 SHA256 ebe216f86d65292a9e365d6a70f23af267aded7533b3e470bd66fc995b15eaf4 SHA512 d10c0a42aebc5e3197adc1f07dea6580d7d513ea2d2f8808bd84dcdeae9bab6c790a2e0fb2a54fb027e60e5edfeb2a84c5b4a2df406c36763a93b624c3c31061 WHIRLPOOL 340bb282927f792ddcecffe46172c96cfe20e6243f925a8b7e037d09930053c5a806336e5c2f41dbc4126fcf78221da0deee985f4c9f54f7ad5b15205492170f
 MISC metadata.xml 501 SHA256 0f1bd9e307bc0b7f1e5f116c5993f8c36cd796a11bf7f5deca930d43d1d3574b SHA512 19b638437b7591c262ac41401f4154742325aa8afa7a3b087c85b3dee2e4ce98166cc67136bc31d1df25b5bb90eaf6482e05de1ee25023f3f03ad017789b0ccd WHIRLPOOL edfa93878dbaf97c227c18f43805ca48c83978d94d8f4ddf000cd8a2b34bd13dd2454c9086497e00b8cce1cec1d38763b3f8e0a55f0b39f4fc3172d4a858d4ce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUT3UcACgkQid6yGVZcMrx19AEAmsT89/UZUuoyt85I36de5C/F
-8KscLTNfBsUgvzjMkxMA/R5X79lV7QWLxpAMspBPjoTeifcXJKtxL9vG5SxicICE
-=FDXl
+iQJ8BAEBCABmBQJVJXIJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOrrUQAKA6DyzcYRm1aI54JOZR/XjX
+uW+4N4GqdMPCB16i0f96ylaNLXfrL6SeYMfInBu8+Ftl0QRkQ3a3cs5fEfNqHUQz
+4e2W/P3Qxr8Q58/WGG+8z14jzUll/Pp1VZ4a970PF+o9scnaRt6qd2rGh+MBfUCT
+i0d5VTk67aBSPBgJkOLrO9oRthKaHD0W2P9n6o793sKCz9+BzBsnljzfwzLhpO7w
+I5kixDBK6AfJ4phUNNcoIn6Orhz27O/33tk347z2H/qDftte4T6z9A8DnyQnrEkK
+YVaDzq/8ULfb4TsPwxhQfZ5fAkDHXDoqPls7dKlLTJSID7I31CkBjr8qD9yDCbJC
+7s6NMu2PHUSHTtoFR+5t8AddP1ygnitTb4yOuefR5iyf/MgYpgycPGy6adLu2X9X
+ybolAgu1CzUDGHWVNXlCJWgAJHCxWxD8FZ1voyCPAoqUDyWR64KsHnpJn0qIa2fz
+6cacsR0+uJG5GIRDyVNVkVnf7JLqct6bkRWnRFCERRhbyxL/fVtKoTez9LOaIOKF
+mpeFUQ6z5i9CQNEFvWadNtnuMmtbLeXQzhYeGxrqHqkHi/oRjn8H9NvF/Ls2eKiX
+Im/6zz/fAItfE1KJpaVnWJbbglR7K8BSuITJYw2fc0qgwXhlLCdmqOpC2ZFhGQ70
+g9RU1qxXJWCJaPtLuhuq
+=qtWg
 -----END PGP SIGNATURE-----
