@@ -18,14 +18,26 @@ DIST Singular-3-1-6-share.tar.gz 10620177 SHA256 c74a97b7eb8ed53417682637fe11c24
 DIST Singular-3-1-6.tar.gz 25535111 SHA256 7956a17a0b5d428fea25bc0bc6c19c753748fb98bb2926c49b9fbcbec94172ff SHA512 103a10dd474d93cceb678bcef1a4aae5ec693cb9e68c9d63a7536929b738a0127501ee145a79cc3b9ddfa4bd1ca0f05e640eeb3b0fbdb60de4f56aa5beacc213 WHIRLPOOL 71ef6d505f7c8b2eeacd46666640d7b3c79f75d6c2c858b135553b1fb3a9dd7d88df74924009468c32aa4aa748b88ccb7762010ab4d36eec420a07fd36e8dd22
 DIST singular-4.0.2-share.tar.gz 8789162 SHA256 fe81cb100f3b73b159eb4a8122a29bc0f7705ef6f62ad55b68b5582c1ec0642d SHA512 068827df04a5d1b4407dbaab1296d0120071dc109b749037b02263d51906852a5c2c1ef321733953a181c2d3d0fe799c197ef0af3b9341810ecf31a5324e0a25 WHIRLPOOL 615487e95e32d9f07552e92ebcd46e3071d110dd31e7d980b01340d22a5205ba2d771532fad1bf44863a38820428157284a171e0b901861fda6e51482d546adc
 DIST singular-4.0.2.tar.gz 8635172 SHA256 c105a2c8ace0b3c9189b782ed63660ce235407d0160907c2cafc2128d36d8cb7 SHA512 4543a45839ce8adc45e3b2edd84a6e398b7ba157da1eda050dbce2a8b20333eb0c63433e3e7eaf59d76bf6bcb65c1b1611bfc08c25fd493c88e2f06624898e3d WHIRLPOOL fe30bc87c6b403b2e30bd1c016aeeb015c2a64a63d87b81536dc53a2555ac068f3e0c6d8763775d8be5e5e1a935aadab1c86b603cbb698234a19cc9cfffac282
-EBUILD singular-3.1.6.ebuild 4770 SHA256 76405ee23daaff5d73b42e96c18e93a56277c6d3ecb1f32b7fa6df9b22a76d8d SHA512 0308de0e31ec6f8e5801a3375f43f52970d0e173ae48484ddfa074021535d82962ba494a4bc200b4e41c0e3a59702499003b2330ce03806081bf1bdac9b7ec12 WHIRLPOOL 752fa5fdff5f4e719af2ca8edc4ebc90ce8744ede046f7f5b8a7d0f9d142dbc7b8dbbb1d77abc39867337adbe44250af40b286cb59598c24334533fbbd4517a5
+EBUILD singular-3.1.6.ebuild 4767 SHA256 3768f9c70070faa781080fc3dc7760a4a1435b2ced6c75750def20052c79cd41 SHA512 d6d6970af2818bf7f1a8b657e0104adbe0bc5370c532c4f0f600e968e9a9cc835d5883c7010755ba610d9fc47e8ff40a138cf04db8ce47e6c02179b6171d3ffe WHIRLPOOL f81cb60a570db63fec8acc39ac242b62127a7014745cf95a7fd830be706c7beb04b2debc463114e0f3cb7a1272d5578781dfc4b2f7794ac9a0632017380d60b8
 EBUILD singular-4.0.2.ebuild 4081 SHA256 45741a6d64f1d8d73e593584ce9262681d0e0a6b403ce5cfd4d968d3f4144350 SHA512 d25c3e17922f641fde54bfd9ead27b87efaf7d369479a8310a3bd531e0cffac0711c366071b3bf4b6781bcbd77df3270ff85041450323f8c78c798cb6c7b876b WHIRLPOOL f0dfa9827c494717be4a7298cf7c74fb2f552a311658ccc80886ed297e1ae8ec44bcc5a71c3ba857b47a37dc0771bc9be3c2e391624af509ec9d8b0c3728e8ca
-MISC ChangeLog 13791 SHA256 adb73d456d950cb68bdf7bf0739c341e4a2082ba1f041091e6db3c6b57fdab26 SHA512 75e779b4eff5ad8963581211d30c8677bf4f53b88570a835dff047f3ff208cd2ae62ce99c03521541c6dba5c1b58ed757e15db5376505be02595e8b9353de0ce WHIRLPOOL 364d531a377fd7568dbdb1c0511f60d79e2e6e1dbac0f1bebbaed3abff1ad08186b64213039c18d51134916f0ada4a72132ea9e93898337198a28ba772c8a47f
+MISC ChangeLog 13900 SHA256 06b4c1e3769bd8650d7222cba909ae91bbfb17e67e38f1941534cbeee41d0c09 SHA512 5a9d9e5cd34946c68564f424978c033b1adfa78bbb84248f7f6b7006af0d804eb09c15c148fbf37091ad96ffb582c292b634b6366351a5c531fd71a081e17056 WHIRLPOOL a1d8a84ecd284de88d534ab97dfb86237b2a9c7b0976fd345d75627ec8b9baa981c988505c681d6447c5cd32d1e831ed856f62ee57f343b11cb4476207a9d608
 MISC metadata.xml 381 SHA256 784d034201d00e1cf426a61486184b5178702a00dbaa4be3740a462c45cc1312 SHA512 5896b2b956ca1405616871bdb55981b94a22cb4b4f6483096429ec8b010d522d32d9e4eb0a87bc040aab6d3ff8007f1b0f3172d7994f74a408dd9628e89dc08d WHIRLPOOL d5b8312b3aed717bcf191dccad086994456e413a0444d11c216e96a416b4cf1d3c4903ba187cdee3e61a9dddaa1858958766e0782b28ab8ff6c6d5fa86b7eaac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUT/7IACgkQid6yGVZcMry1QQD5Aaou8VF3gNTpA9mRhz6RTUIN
-uQwvDWG6Jkk386Dxe54BAJ0f2S009bCyc52yyT0KbKaWVKVsM+Q2ajl1WO/qmVZ3
-=dYpm
+iQJ8BAEBCABmBQJVJXIKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZODCQP/iy84Ylyuv+Abl4uciBf35NS
+VVo15giZ5guP/liugo+fhRrbbQjaOas48GUgiSHaJuv8H+bs/SY6u6htIOC0DcoI
+wsxlVieXtzehf+nrLpJNgZrACqqQp22T/eyiN9uQ2tg3itM070Z4CCusu7q4FSEl
+gBpCxaBxMh2BN8wku8EXNwaViPGAmeY+hU5Kq/nxIAaee6HYMKGLIF6fnkYrTMWh
+CMmAWvN3qs4l5e7HVUFH/LfjyPI0zNbj1ztziEtaxEknTE6pgJPRp/gD+G5A+BMf
+CiXeqeHlaJwuoTvPsQjwYCsMnimsvrlc7vGvhg75tIw/Cpnj9NZ3pMMdOvnbEaOT
+bkfn3X40YX47Xd7P4nnSyyMB6f5ec4Onjw5eoxAz4F4bYOltyeEXhGnOD5kN2NbI
+RuRoGFMpCUU8BXqn8T4s4pY0RwWQPjrRCSYm6aqXcQoaSOAnWVHjLmNDSEV9UYlu
+JIju+nEnsNuDe1jwg62g4Y75ayRmtmGZMsHHjFwQ6/Mft4v0PT7SuAzprw04aVk1
+iObS2Sr8tnwcrJ6zaBWsYvjSzG8O3mx8LjNwyDi20WxJ57LuhxjQcrAJ+6/btK4M
+QLuDXGFNQU3MsQ48jHE5YYIGYNUFrNXgC3gpOs7prsP3+2lvnSJ+Ko923u4sjNnm
+YNm72Zwor0p7myE7cfw1
+=Off2
 -----END PGP SIGNATURE-----
