@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/mlpy
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/mlpy/ChangeLog,v 1.3 2013/12/11 12:49:15 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/mlpy/ChangeLog,v 1.4 2015/04/08 18:23:00 mgorny Exp $
+
+  08 Apr 2015; Michał Górny <mgorny@gentoo.org> mlpy-3.5.0.ebuild:
+  Drop old Python implementations
 
   11 Dec 2013; Justin Lecher <jlec@gentoo.org> mlpy-3.5.0.ebuild, metadata.xml:
   Bump to EAPI=5 and distutils-r1.eclass
