@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/singular
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/singular/ChangeLog,v 1.64 2015/03/26 12:44:41 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/singular/ChangeLog,v 1.65 2015/04/08 18:23:00 mgorny Exp $
+
+  08 Apr 2015; Michał Górny <mgorny@gentoo.org> singular-3.1.6.ebuild:
+  Drop old Python implementations
 
   26 Mar 2015; Thomas Kahle <tomka@gentoo.org>
   +files/singular-4.0.2-ntl8-compat.patch, singular-4.0.2.ebuild:
