@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/Macaulay2
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/Macaulay2/ChangeLog,v 1.34 2015/03/26 10:17:49 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/Macaulay2/ChangeLog,v 1.35 2015/04/08 18:23:00 mgorny Exp $
+
+  08 Apr 2015; Michał Górny <mgorny@gentoo.org> Macaulay2-1.7_pre.ebuild:
+  Drop old Python implementations
 
   26 Mar 2015; Thomas Kahle <tomka@gentoo.org> Macaulay2-1.4-r1.ebuild,
   Macaulay2-1.4.ebuild, Macaulay2-1.6.ebuild, Macaulay2-1.7_pre.ebuild:
